# ViennaPS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
.github/actions/cache-check/: action.yml  check.py
.github/setup-action/: action.yml
.github/setup-viennals/: action.yml
.github/setup-viennaray/: action.yml
.github/workflows/: linux.yml  linux_cache.yml  linux_test.yml  macos.yml  macos_cache.yml  macos_test.yml  test_output.yml  windows.yml  windows_cache.yml  windows_test.yml
Examples/: CMakeLists.txt
Examples/CantileverWetEtching/: CMakeLists.txt  CantileverWetEtching.cpp  CantileverWetEtching.py
Examples/ExampleProcess/: CMakeLists.txt  ExampleProcess.cpp  ExampleProcess.py  SurfaceModel.hpp  VelocityField.hpp
Examples/GDSReader/: CMakeLists.txt  GDSReader.cpp  GDSReader.py
Examples/GeometryExample/: CMakeLists.txt  GeometryExample.cpp
Examples/HoleEtching/: CMakeLists.txt  HoleEtching.cpp  HoleEtching.py  Parameters.hpp  config.txt
Examples/InterpolationDemo/: CMakeLists.txt  InterpolationDemo.cpp  griddata.csv  scatterdata.csv
Examples/InterpolationTest/: CMakeLists.txt  InterpolationTest.cpp  griddata.csv
Examples/KDTreeBenchmark/: CMakeLists.txt
Examples/OxideRegrowth/: CMakeLists.txt
Examples/ProfileExtrusion/: CMakeLists.txt  ProfileExtrusion.cpp  ProfileExtrusion.py
Examples/Redeposition/: CMakeLists.txt
Examples/TrenchDeposition/: CMakeLists.txt  Parameters.hpp  TrenchDeposition.cpp  TrenchDeposition.py
Examples/TrenchDepositionGeometric/: CMakeLists.txt  Parameters.hpp  TrenchDepositionGeometric.cpp  TrenchDepositionGeometric.py
Examples/VolumeModel/: CMakeLists.txt  Parameters.hpp  VolumeModel.cpp  VolumeModel.py
Python/: CMakeLists.txt  __init__.py.in  pyWrap.cpp
ViennaPS/: psDomain.hpp  psProcess.hpp  psProcessModel.hpp  psProcessParams.hpp  psSurfaceModel.hpp  psToSurfaceMesh.hpp  psTranslationField.hpp  psVelocityField.hpp  psVolumeModel.hpp
ViennaPS/DenseCellSet/: csBVH.hpp  csBoundingVolume.hpp  csDenseCellSet.hpp  csTracePath.hpp  csTracing.hpp  csTracingKernel.hpp  csTracingParticle.hpp  csUtil.hpp
ViennaPS/Geometries/: psMakeFin.hpp  psMakeHole.hpp  psMakeTrench.hpp
ViennaPS/Models/: PlasmaDamage.hpp  SF6O2Etching.hpp  SimpleDeposition.hpp
app/: Application.hpp  ApplicationParser.hpp  CMakeLists.txt
include/: psGDSReader.hpp  psProcess.hpp  psProcessModel.hpp  psUtils.hpp
include/Compact/: psCSVDataSource.hpp  psCSVReader.hpp  psCSVWriter.hpp  psDataScaler.hpp  psDataSource.hpp  psKDTree.hpp  psNearestNeighborsInterpolation.hpp  psParser.hpp  psPointLocator.hpp  psRectilinearGridInterpolation.hpp  psRectilinearGridInterpolator.hpp  psValueEstimator.hpp
include/Geometries/: psExtrudeProfile.hpp  psMakeExtrudedProfile.hpp
include/Models/: GeometricDistributionModels.hpp  PlasmaDamage.hpp  SF6O2Etching.hpp  StackRedeposition.hpp
